# dotfiles

./: .containerignore  .editorconfig  .envrc  .gitattributes  .gitconfig  .gitignore  .gitleaks.toml  .gitmodules  .goreleaser.yaml  .lycheeignore  .markdownlint-cli2.yaml  .nix-update-message  .pre-commit-config.yaml  .rubocop.yml  .rumdl.toml  .tool-versions  .trivyignore  .zpreztorc  .zshenv  .zshrc  CONTRIBUTING.md  Containerfile  Makefile.toml  README.md  Taskfile.yaml  Taskfile.yml  _typos.toml  bootstrap.sh  cmd.go  copy.go  default.nix  devShells.nix  dprint.json  dprint.jsonc  flake.nix  go.mod  go.sum  install.bash  linter.go  lychee.toml  (+11 more)
.config/: .aliases.sh  .asdfrc  .bashrc  .gitconfig  .tool-versions  .zpreztorc  .zprofile  .zshenv  .zshrc  starship.toml
.githooks/: pre-commit  pre-commit.bash
.github/: README.md  dependabot.yml  renovate.json
.zed/: settings.json
cmd-ocaml/: dotfiles_tools.opam  dune-project
cmd-ocaml/git_hooks_commit_msg/: dune  main.ml
cmd-ocaml/git_hooks_pre_push/: dune  main.ml
cmd-ocaml/githooks_lib/: dune  githooks.ml
cmd-ocaml/lint/: dune  main.ml
cmd-ocaml/mksym/: dune  main.ml
cmd-ocaml/run_local_hook/: dune  main.ml
config/: rclone.md  windows-assets.go  windows-assets_test.go
containers/: Containerfile  README.md  build.bash  cleanup.bash  needs_systemd.bash  sandbox-with-ghcr.bash  sandbox.bash
darwin/: README.md
dependencies/: README.md
docs/: container.md
home-manager/: README.md  bash.nix  browser.nix  common.nix  darwin.nix  default.nix  desktop.nix  dev.nix  editor.nix  editors.nix  fish.nix  (+45 more)
(+725 files in other folders)
